<resources>
    <string name="app_name">IMPro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--splash Activity-->
    <string name="start_page">启动页</string>
    <string name="need_permission">您需要开启权限,并重启应用</string>

    <!--login Activity-->
    <string name="login_title">登录</string>
    <!--home activity-->
    <string name="home_conversation_tab">会话</string>
    <string name="home_contact_tab">联系人</string>
    <string name="home_setting_tab">设置</string>
    <string name="home_add">添加</string>

    <!--connect fragment-->
    <string name="new_friend">新朋友</string>
    <string name="open_group">公开群</string>
    <string name="discuss_group">讨论组</string>
    <string name="chatroom">聊天室</string>
    <string name="default_group_name">默认分组</string>
    <string name="people">人</string>
    <string name="connect_empty">暂无联系人，请先添加</string>

    <!-- message -->
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="summary_me">我</string>
    <string name="summary_group_apply">申请加群</string>
    <string name="summary_group_invite">邀请</string>
    <string name="summary_group_add">加入群</string>
    <string name="summary_agree">同意</string>
    <string name="summary_disagree">拒绝</string>
    <string name="summary_invite_person">邀请人</string>
    <string name="summary_handle_person">处理人</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_group_mem_change">群成员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>

    <!--image-->
    <string name="save_succ">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="download_fail">加载失败！</string>
    <string name="file_not_found">没有发现文件！</string>

    <!--会话界面-->
    <string name="conversation_tab">会话</string>
    <string name="searchfriend">搜索朋友</string>
    <string name="all_friend">所有好友</string>
    <string name="check_request">验证消息</string>
    <string name="public_group">公开群</string>

    <!--所有朋友界面-->
    <string name="conn_friend">所有朋友</string>

    <!--分组管理界面-->
    <string name="friend_manager">分组管理</string>
    <string name="add_group_friend_manager">添加分组</string>
    <string name="add_dialog_null">分组名称不能为空</string>
    <string name="add_group_error_existed">添加分组失败，分组已存在</string>
    <string name="add_group_error_limit">添加失败，分组达到上限</string>
    <string name="add_group_error">添加分组失败</string>
    <string name="add_group_succ">添加分组成功</string>
    <string name="del_group_error">删除分组失败</string>
    <string name="del_group_succ">删除分组成功</string>
    <string name="change_group_error">更改分组失败</string>
    <string name="change_group_succ">更改分组成功</string>
    <string name="no_reset_name">默认分组不能重命名</string>
    <string name="no_del_name">默认分组不能删除</string>
    <string name="no_edit_name">默认分组不能编辑</string>
    <string name="get_member_group">获取分组失败</string>
    <string name="edit_group_dialog_title">编辑分组</string>
    <string name="edit_group_dialog_content">请输入不同的组名称</string>

    <!--分组编辑_组资料-->
    <string name="edit_group_name">组名称</string>
    <string name="edit_group_member">组成员</string>
    <string name="fge_group_name">组资料</string>
    <string name="fge_no_member">暂无组成员</string>
    <string name="del_member_failed">删除成员失败</string>
    <string name="del_member_succ">删除成员成功</string>
    <string name="get_member_fail">获取成员失败</string>
    <string name="add_member_fail">添加成员失败</string>
    <string name="add_member_succ">添加成员成功</string>

    <!--添加好友-->
    <string name="add_friend">添加好友</string>
    <string name="add_phone_book">手机通讯录添加</string>
    <string name="edit_phone_nick_add_fri">手机号、用户名</string>
    <string name="add_fri_user_error">搜索用户失败！</string>

    <!--添加好友-->
    <string name="phone_con_title">通讯录好友</string>
    <string name="sms_invite">[医之家]强烈推荐，医之家APP重磅推出名医专家在线课程直播，与专家一起随时随地畅享学习乐趣！APP也能自动提醒你关注的课程，还等什么？赶快加入吧！http://www.yzjonline.com/</string>


</resources>
