<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/sv_fge"
    android:background="@color/background"
    tools:context="cn.heren.com.impro.view.activity.FriendGroupEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_group_name"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/tv_edit_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_group_member"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/tv_edit_group_count"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="人"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white">
            <ImageView
                android:id="@+id/iv_add_member"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/add_room_member"
                />
        </RelativeLayout>
        <cn.heren.com.impro.widget.SwipeListView
            android:id="@+id/listView_fge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tv_no_mamber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:layout_marginTop="150dp"
            android:text="@string/fge_no_member"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"
            />
    </LinearLayout>

</ScrollView>
