<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="none"
    android:id="@+id/sv_conv"
    tools:context="cn.heren.com.impro.view.activity.ConversationActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/linearLayout_searchFriend"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selecter_roun_rec">

            <LinearLayout
                android:id="@+id/ll_allFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/searchfriend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/searchfriend"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_all_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:background="@android:color/white">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/friend"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="7dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/all_friend"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>
        </LinearLayout>
       <View
           android:layout_width="match_parent"
           android:layout_height="0.3dp"
           android:background="@color/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_home_patient_friend_request"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="验证消息"
                android:layout_marginLeft="56dp"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_conv_check_Request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/red_round_icon"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:visibility="visible" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/group"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="7dp"
                />
            <TextView
                android:id="@+id/tv_allFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/public_group"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>
        </LinearLayout>

     <cn.heren.com.impro.widget.ConversationListview
         android:id="@+id/lv_conv"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="match_parent"/>
    </LinearLayout>
</ScrollView>
